# mls-demo

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client_persistence.rs  main.rs  mls_client.rs  types.rs
server/: Cargo.toml
server/src/: main.rs  mls_manager.rs  persistence.rs  types.rs
