[workspace]
members = [
    "server",
    "client"
]

resolver = "2"

[workspace.dependencies]
openmls = "0.6"
openmls_traits = "0.3"
openmls_rust_crypto = "0.3"
openmls_basic_credential = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"