[package]
name = "openmls-client"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
openmls_basic_credential = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
rustyline = "14.0"
chrono = { version = "0.4", features = ["serde"] } 