[package]
name = "openmls-server"
version = "0.1.0"
edition = "2021"

[dependencies]
openmls = { workspace = true }
openmls_traits = { workspace = true }
openmls_rust_crypto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] } 